# fsgate

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/design/: auth.md
src/: app.rs  auth.rs  config.rs  credentials.rs  lib.rs  main.rs  mcp.rs  notes.rs  oauth.rs
src/auth/: jwt.rs  password.rs  pkce.rs  session.rs  webauthn.rs
src/oauth/: authorize.rs  bearer.rs  dcr.rs  discovery.rs  enroll.rs  error.rs  pages.rs  token.rs
tests/: gate.rs  handlers.rs  oauth_flow.rs  startup.rs
tests/common/: harness.rs
