[package]
name = "fsgate"
version = "0.1.0"
edition = "2024"
description = "Remote filesystem MCP server with OAuth 2.1 + passkey, built for Claude on iPhone"
license = "MIT"
repository = "https://github.com/wakita181009/fsgate"
readme = "README.md"

[dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
askama = { version = "0.16.0", features = ["serde_json"] }
axum = "0.8.9"
base64 = "0.22.1"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
openssl = { version = "0.10.81", features = ["vendored"] }
rand = "0.10.2"
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["serde", "formatting"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4"] }
webauthn-rs = "0.5.5"
